Fixing label spacing issue in protfolio views

--- a/css/custom.css
+++ b/css/custom.css
@@ -495,6 +495,11 @@ hr {
 }
 
 /*Portfolio styling*/
+.portfolioPieceLabel
+{
+	margin-left: 30px;
+}
+
 .circleIconContainer
 {
 	margin-top: 5%;
@@ -532,11 +537,6 @@ hr {
 		margin-bottom:50px;
 	}
 }
-
-/*.circleIConLabel
-{
-	margin-left: 30px;
-}*/
 
 .pdfViewer{
 	border-color:#bcffcf;
